sIBL_GUI - 1.9.2 - Change Log -
- Added Collection ListWidget Tooltips Support  For V2 Parameters.
- Refinements In The sIBL_GUI UI.
- Preferences LineEdits Are Not Cropping Their Content Anymore.
- sIBL_GUI Help / Manual Has Been Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -4,17 +4,23 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 1 . 9 . 1 - N i g h t l y</span>
+            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 1 . 9 . 2 - N i g h t l y</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Change Log</span>
         </p>
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        	<span style="font-size: 14pt; font-weight: 700">1.9.2 - Nightly</span>
+            <span style="font-size: 14pt; font-weight: 700">1.9.2 - Nightly</span>
             <ul>
             	<li>
-                    Some Gui Refinements.
+                    Improved Collection ListWidget ToolTips with Shot Time.
+                </li>
+                <li>
+                    Gui has received some refinements.
+                </li>
+                <li>
+                    Line Edits are not cropping their content anymore on Mac Os X.
                 </li>
                 <li>
                     Changed the About Tab with Links Support, etc.
@@ -25,7 +31,7 @@
             </ul>
             <span style="font-size: 14pt; font-weight: 700">1.9.1</span>
             <ul>
-            	<li>
+                <li>
                     Updated sIBL_GUI Manual.
                 </li>
                 <li>
@@ -35,7 +41,7 @@
                     Splashscreen now stays on top of other windows.
                 </li>
             </ul>
-            <span style="font-size: 14pt; font-weight: 700">1.9.0 - Nightly</span>
+            <span style="font-size: 14pt; font-weight: 700">1.9.0</span>
             <ul>
             <li>
                 Templates names have been changed.
