sIBL_GUI - 2.0.0 - Change Log -
- Help / Manual File has been Updated.
- Refinements in sIBL_GUI UI.
- Trapped some errors if loader script failed.
- Corrected an error in sIBL_Framework introduced while reorganising Imports.
- GPS Map Markers weren't properly resized while using the keyboard shortcuts to zoom in and out.
- Cleaned a bit the Collection ListWidget ToolTips V2 Support Code.

- External Tools Updates.

--- a/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
+++ b/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
@@ -214,7 +214,7 @@
                                 <b>GPS Map</b>
                                 : The <b>GPS Map</b>
                                 Shows the location of your <b>sIBL Sets</b>
-                                on a World Map. You can Zoom with the ScrollWheel and Pan by Dragging with the Left Mouse Button. Leaving the mouse over a <b>Marker</b>
+                                on a World Map. You can Zoom with the ScrollWheel or "+" / "-" keys and Pan by Dragging with the Left Mouse Button. Leaving the mouse over a <b>Marker</b>
                                 will pop a Preview with some Informations about the <b>sIBL Set</b>. Double Click a <b>Marker</b>
                                 will send it to the <b>Import Tab</b>.
                             </li>
@@ -478,7 +478,7 @@
                     <img src="Resources/sIBL_GUI%20-%20Log%20Window.jpg">
                     <p>
                         <b>Log Window</b>
-                        verbose nearly everything happening into <b>sIBL_GUI</b>, it can help finding what's going wrong if <b>sIBL_GUI</b>
+                        verboses nearly everything happening into <b>sIBL_GUI</b>, it can help finding what's going wrong if <b>sIBL_GUI</b>
                         don't work the way it should.
                     </p>
                     <br/>
@@ -490,7 +490,7 @@
                     <img src="Resources/sIBL_GUI%20-%20Updater.jpg">
                     <p>
                         <b>sIBL_GUI - Updater</b>
-                        allow you to see if your sIBL_GUI Release is up to date. You can check the latest sIBL_GUI version with it's Change Log, and the New / Updated Templates.
+                        allows you to see if your sIBL_GUI Release is up to date. You can check the latest sIBL_GUI version with it's Change Log, and the New / Updated Templates.
                         <br/>
                         <br/>
                         <span style="font-size: 12pt; font-weight: 700">Interactable Widgets Descriptions :</span>
