--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         <span style="font-size: 14pt; font-weight: 700">2.0.0 - Stable</span>
         <ul>
             <li>
+                Help / Manual File has been Updated.
+            </li>
+            <li>
                 Refinements in sIBL_GUI UI.
             </li>
             <li>
