sIBL_GUI - 2.0.0 - Change Log -
- Change Log has been Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,7 +14,7 @@
         <span style="font-size: 14pt; font-weight: 700">2.0.0 - Stable</span>
         <ul>
             <li>
-                Help / Manual File has been Updated.
+                Updated sIBL_GUI Help / Manual.
             </li>
             <li>
                 Refinements in sIBL_GUI UI.
@@ -56,7 +56,7 @@
         <span style="font-size: 14pt; font-weight: 700">1.9.1</span>
         <ul>
             <li>
-                Updated sIBL_GUI Manual.
+                Updated sIBL_GUI Help / Manual.
             </li>
             <li>
                 Tweaked the Walker so it correctly return files with multiple "." in their name.
