sIBL_GUI - 2.0.0 - Change Log -
- Templates Updated.
- VRay For Maya Template Started.
- sIBL_GUI UI Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -11,7 +11,13 @@
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        <span style="font-size: 14pt; font-weight: 700">2.0.0 - Stable</span>
+        	<span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
+        <ul>
+            <li>
+                Refinements in sIBL_GUI UI.
+            </li>
+        </ul>
+        <span style="font-size: 14pt; font-weight: 700">2.0.0</span>
         <ul>
             <li>
                 Updated sIBL_GUI Help / Manual.
@@ -23,7 +29,7 @@
                 Trapped some errors if loader script failed.
             </li>
             <li>
-                Corrected an error in sIBL_Framework introduced while reorganising Imports.
+                Corrected an error in sIBL_Framework introduced while reorganizing Imports.
             </li>
             <li>
                 GPS Map Markers weren't properly resized while using the keyboard shortcuts to zoom in and out.
