sIBL_GUI - 2.0.0 - Change Log -
- VRay For Maya Template Updated.
- Maya Mental Ray Template Updated.
- Overall Code Cosmetics
- sIBL_GUI Attributes Gathering.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,6 +13,9 @@
         <p align="justify">
         	<span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
         <ul>
+        	<li>
+                "Ignore Missing Templates" Option sets to False by default now on a fresh install.
+            </li>
             <li>
                 Refinements in sIBL_GUI UI.
             </li>
