--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         	<span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
         <ul>
         	<li>
+                Refactored the Send/Edit sIBL code to something cleaner and stronger.
+            </li>
+        	<li>
                 "Ignore Missing Templates" Option sets to False by default now on a fresh install.
             </li>
             <li>
