sIBL_GUI - 2.0.1 - Change Log -
- Corrected A Bug Preventing Templates / Help Download On Windows In sIBL_Recursive_Walker.
- Maya_MR / Maya_VRay  / XSI_MR Templates Manuals Added / Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -11,12 +11,21 @@
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        	<span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
+        <span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
         <ul>
-        	<li>
+            <li>
+                Corrected a Windows bug preventing download of Templates / Help.
+            </li>
+            <li>
+                Started Maya VRay and Maya Turtle Help / Manual Files.
+            </li>
+            <li>
+                Added Maya VRay and Maya Turtle Templates.
+            </li>
+            <li>
                 Refactored the Send/Edit sIBL code to something cleaner and stronger.
             </li>
-        	<li>
+            <li>
                 "Ignore Missing Templates" Option sets to False by default now on a fresh install.
             </li>
             <li>
