--- a/src/Help/Maya_MR Template/Maya MR Template Manual.htm
+++ b/src/Help/Maya_MR Template/Maya MR Template Manual.htm
@@ -56,7 +56,7 @@
         <p align="justify">
             <span style="font-size: 18pt; font-weight: 700">Introduction</span>
             <br/>
-            Maya MR is a sIBL_GUI Template for Maya and Mental Ray starting from 2K versions. It provides a bridge beetween Maya and Smart IBL. There is also an Helper Script with everything you need to use sIBL_GUI smoothly with Maya here : <a href="http://www.hdrlabs.com/cgi-bin/forum/YaBB.pl?num=1223936394/2#2">sIBL_GUI For Maya - Helper Script</a>
+            Maya MR is a sIBL_GUI Template for Maya and Mental Ray starting from 2K versions. It provides a bridge beetween Maya, Mental Ray and Smart IBL. There is also an Helper Script with everything you need to use sIBL_GUI smoothly with Maya here : <a href="http://www.hdrlabs.com/cgi-bin/forum/YaBB.pl?num=1223936394/2#2">sIBL_GUI For Maya - Helper Script</a>
         </p>
         <p align="justify">
             <span style="font-size: 18pt; font-weight: 700">Options</span>
@@ -70,10 +70,10 @@
                         <b>Create Background :</b> Create the Background Environment Branch of the <i>Raytype</i> Shader ( Using the High Resolution LDR file of the current IBL Set ).
                     </p>
                     <p>
-                        <b>Create Reflection :</b> Create the Reflection Branch of the <i>Raytype</i> Shader ( Using the Reflection HDR file of the current IBL Set ).
+                        <b>Create Reflection :</b> Create the Reflection Environment Branch of the <i>Raytype</i> Shader ( Using the Reflection HDR file of the current IBL Set ).
                     </p>
                     <p>
-                        <b>Create Lighting :</b> Create the Lighting Branch of the <i>Raytype</i> Shader ( Using the Lighting HDR file of the current IBL Set ).
+                        <b>Create Lighting :</b> Create the Lighting Environment Branch of the <i>Raytype</i> Shader ( Using the Lighting HDR file of the current IBL Set ).
                     </p>
                     <p>
                         <b>Create Sun :</b> Create the light used as Sun.
@@ -88,7 +88,7 @@
                         <b>Create Ground :</b> A <i>Plane</i> is added to the <i>Scene</i>.
                     </p>
 					<p>
-                        <b>Activate Final Gather :</b> <i>Final Gathering</i> is activated on the current <i>Scene</i>.
+                        <b>Activate Final Gather :</b> <i>Final Gathering</i> is activated in the current <i>Scene</i>.
                     </p>
 					<p>
                         <b>Create FeedBack :</b> Make the Feedback visible and attach to it the current IBL LDR Background image so there is a visual feedback in the <i>Viewport</i>.
