sIBL_GUI - 2.0.2 - Change Log -
- Updated External Tools.
- sIBL_GUI Is Now Using .jpg GPS Map.
- Updated sIBL_GUI_Releases.rc Versions Numbers.
- Updated NSIS Script Version Number.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -4,14 +4,26 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 1 - S t a b l e</span>
+            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 2 - S t a b l e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Change Log</span>
         </p>
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        <span style="font-size: 14pt; font-weight: 700">2.0.1 - Stable</span>
+        <span style="font-size: 14pt; font-weight: 700">2.0.2 - Stable</span>
+        <ul>
+        	 <li>
+                Maya MR Template Help / Manual Files updated.
+            </li>
+            <li>
+                Maya Templates have been updated, VRay For Maya and Turtle For Maya are released as stable.
+            </li>
+            <li>
+                GPS Map is now a .jpg file for faster loading and XSI Addon Packaging Problem.
+            </li>
+        </ul>
+        <span style="font-size: 14pt; font-weight: 700">2.0.1</span>
         <ul>
             <li>
                 Corrected a Windows bug preventing download of Templates / Help.
