--- a/src/Help/Maya_MR Template/Maya MR Template Manual.htm
+++ b/src/Help/Maya_MR Template/Maya MR Template Manual.htm
@@ -88,6 +88,9 @@
                         <b>Create Ground :</b> A <i>Plane</i> is added to the <i>Scene</i>.
                     </p>
 					<p>
+                        <b>Ground Shadow Catcher :</b> A <i>mip_matteshadow</i> Shader is assigned to the <i>Ground</i>.
+                    </p>
+					<p>
                         <b>Activate Final Gather :</b> <i>Final Gathering</i> is activated in the current <i>Scene</i>.
                     </p>
 					<p>
