--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -4,14 +4,26 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 2 - S t a b l e</span>
+            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 1 . 0 - S t a b l e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Change Log</span>
         </p>
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        <span style="font-size: 14pt; font-weight: 700">2.0.2 - Stable</span>
+        	<span style="font-size: 14pt; font-weight: 700">2.1.0 - Stable</span>
+        <ul>
+            <li>
+                sIBL_GUI FTP is verbosing when Gathering Files List.
+            </li>
+            <li>
+                It's now possible to choose the Templates you want to download.
+            </li>
+            <li>
+                Custom Widgets Code Refactoring For Better Reusability.
+            </li>
+        </ul>
+        <span style="font-size: 14pt; font-weight: 700">2.0.2</span>
         <ul>
             <li>
                 Maya MR Template Help / Manual Files updated.
