sIBL_GUI - 2.0.5 - Change Log -
- Merged sIBL_GUI_Message and sIBL_GUI_QWidgets Modules.
- Removed sIBL_GUI_Message From Version Control.
- Cleaned Duplicated Imports In Some Generated PY Files.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,6 +13,9 @@
         <p align="justify">
         	<span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
         <ul>
+        	<li>
+                Options Table Widgets are now properly reseted when there are no Templates available.
+            </li>
             <li>
                 sIBL_GUI FTP is verbosing when Gathering Files List.
             </li>
