sIBL_GUI - 2.0.5 - Change Log -
- Collection Thumbnails Code Is Checking For Thumbnails File Formate, And Using A Default Picture If File Format Is Not Supported.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         	<span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
         <ul>
         	<li>
+                A default Picture is used when a Thumbnail is using an unsupported File Format ( Tga / Tif are not supported yet for example ).
+            </li>
+        	<li>
                 Options Table Widgets are now properly reseted when there are no Templates available.
             </li>
             <li>
