--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         	<span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
         <ul>
         	<li>
+                Corrected a bug where Custom Editor / Browser weren't starting at all when defined.
+            </li>
+        	<li>
                 A default Picture is used when a Thumbnail is using an unsupported File Format ( Tga / Tif are not supported yet for example ).
             </li>
         	<li>
