sIBL_GUI - 2.0.5 - Change Log -
- sIBL_GUI Manual / Help Files Updated.
- sIBL_GUI UI Updated.
- Change Log Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -11,15 +11,21 @@
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        	<span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
+        <span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
         <ul>
-        	<li>
-                Corrected a bug where Custom Editor / Browser weren't starting at all when defined.
+            <li>
+                Updated sIBL_GUI Help / Manual.
             </li>
-        	<li>
+            <li>
+                Refinements in sIBL_GUI UI.
+            </li>
+            <li>
+                Corrected a bug where user define Custom Editor / Browser weren't starting.
+            </li>
+            <li>
                 A default Picture is used when a Thumbnail is using an unsupported File Format ( Tga / Tif are not supported yet for example ).
             </li>
-        	<li>
+            <li>
                 Options Table Widgets are now properly reseted when there are no Templates available.
             </li>
             <li>
