--- a/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
+++ b/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
@@ -315,13 +315,16 @@
                     <span style="font-size: 14pt; font-weight: 700">Preferences Tab</span>
                     <br/>
                     <br/>
-                    <img src="Resources/sIBL_GUI%20-%20Preferences%20Tab%20-%20Overall%20Settings.jpg">
+                    <img src="Resources/sIBL_GUI%20-%20Preferences%20Tab%20-%20Overall%20Paths%20Settings.jpg">
                     <br/>
                     <br/>
                     <img src="Resources/sIBL_GUI%20-%20Preferences%20Tab%20-%20Collections%20Settings.jpg">
                     <br/>
                     <br/>
                     <img src="Resources/sIBL_GUI%20-%20Preferences%20Tab%20-%20Online%20Update.jpg">
+                    <br/>
+                    <br/>
+                    <img src="Resources/sIBL_GUI%20-%20Preferences%20Tab%20-%20Others%20Options.jpg">
                     <p>
                         <b>Preferences Tab</b>
                         is where you can define options for <b>sIBL_GUI</b>, Add/Remove <b>Sub Collections</b>, activate the <b>Log Window</b>, etc...
@@ -329,7 +332,7 @@
                         <br/>
                         <span style="font-size: 12pt; font-weight: 700">Interactable Widgets Descriptions :</span>
                         <ul>
-                            <span style="font-size: 12pt; font-weight: 700">Overall Settings :</span>
+                            <span style="font-size: 12pt; font-weight: 700">Overall Paths Settings :</span>
                             <br/>
                             <br/>
                             <li>
@@ -360,26 +363,6 @@
                                 : Current Templates folder Path.
                                 <br/>
                                 Tips : Templates folder is recursively parsed so you can structure it the way you want, just avoid using same names for your Templates.
-                            </li>
-                            <li>
-                                <b>Activate Open GL CheckBox</b>
-                                : Activate Open GL Support for the GPS Map.
-                                <br/>
-                            </li>
-                            <li>
-                                <b>Activate Antialiasing CheckBox</b>
-                                : Activate Antialiasing for the GPS Map.
-                                <br/>
-                            </li>
-                            <li>
-                                <b>Verbose Level ComboBox</b>
-                                : Defines sIBL_GUI Verbose Level : Each option comprise the ones over it in the List.
-                            </li>
-                            <li>
-                                <b>Toggles Log Window PushButton</b>
-                                : Show The log Window.
-                                <br/>
-                                Tips : The Log Window is tearable.
                             </li>
                             <br/>
                             <span style="font-size: 12pt; font-weight: 700">Collections Settings :</span>
@@ -432,6 +415,30 @@
                                 <b>Get Latest Templates PushButton</b>
                                 : Launch sIBL_GUI - FTP to Download Templates.
                                 <br/>
+                            </li>
+                            <br/>
+                            <span style="font-size: 12pt; font-weight: 700">Others Options :</span>
+                            <br/>
+                            <br/>
+                            <li>
+                                <b>Activate Open GL CheckBox</b>
+                                : Activate Open GL Support for the GPS Map.
+                                <br/>
+                            </li>
+                            <li>
+                                <b>Activate Antialiasing CheckBox</b>
+                                : Activate Antialiasing for the GPS Map.
+                                <br/>
+                            </li>
+                            <li>
+                                <b>Verbose Level ComboBox</b>
+                                : Defines sIBL_GUI Verbose Level : Each option comprise the ones over it in the List.
+                            </li>
+                            <li>
+                                <b>Toggles Log Window PushButton</b>
+                                : Show The log Window.
+                                <br/>
+                                Tips : The Log Window is tearable.
                             </li>
                         </ul>
                     </p>
