--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -4,14 +4,20 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 5 - S t a b l e</span>
+            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 6 - S t a b l e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Change Log</span>
         </p>
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        <span style="font-size: 14pt; font-weight: 700">2.0.5 - Stable</span>
+        <span style="font-size: 14pt; font-weight: 700">2.0.6 - Stable</span>
+        <ul>
+            <li>
+                Wait Cursor is properly released when Checking For New Releases.
+            </li>
+        </ul>
+        <span style="font-size: 14pt; font-weight: 700">2.0.5</span>
         <ul>
             <li>
                 Updated sIBL_GUI Help / Manual.
