sIBL_GUI - 2.0.6 - Change Log -
- Wait Cursor Is Properly Released After A Check For New Releases.
- Bug Introduced During Custom Text Editor / Browser Code Refactoring Is Corrected.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,6 +13,9 @@
         <p align="justify">
         <span style="font-size: 14pt; font-weight: 700">2.0.6 - Stable</span>
         <ul>
+        	<li>
+                Corrected a bug introduced during the Custom Text Editor / Browser Code Refactoring.
+            </li>
             <li>
                 Wait Cursor is properly released when Checking For New Releases.
             </li>
