sIBL_GUI - 2.0.6 - Change Log -
- Large Background Files Maya Templates Handling Code Finished.
- Version Numbers Updated.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         <span style="font-size: 14pt; font-weight: 700">2.0.6 - Stable</span>
         <ul>
         	<li>
+                Last Maya Templates are packaged.
+            </li>
+        	<li>
                 Corrected a bug introduced during the Custom Text Editor / Browser Code Refactoring.
             </li>
             <li>
