sIBL_GUI - 2.0.7 - Change Log -
- About Tab UI Refinements.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,6 +14,9 @@
         <span style="font-size: 14pt; font-weight: 700">2.0.7 - Stable</span>
         <ul>
         	<li>
+               Refinements in sIBL_GUI UI.
+            </li>
+        	<li>
                Better Verbose when Remote Connection failed.
             </li>
             <li>
