sIBL_GUI - 2.0.8 - Change Log -
- sIBL_GUI Updater Was Downloading More Templates Than Required.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,6 +13,9 @@
         <p align="justify">
         <span style="font-size: 14pt; font-weight: 700">2.0.8 - Stable</span>
         <ul>
+        	<li>
+                Corrected a Bug where more Templates than required were downloaded by sIBL_GUI Updater.
+            </li>
             <li>
                 Debugging Code Cleanup.
             </li>
