--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -14,7 +14,7 @@
         <span style="font-size: 14pt; font-weight: 700">2.0.8 - Stable</span>
         <ul>
         	<li>
-                Corrected a Bug where more Templates than required were downloaded by sIBL_GUI Updater.
+                Fixed a Bug where more Templates than required were downloaded by sIBL_GUI Updater.
             </li>
             <li>
                 Debugging Code Cleanup.
