sIBL_GUI - 2.0.8 - Change Log -
- sIBL_GUI Updater Was Missing Non Local Present Templates.
- Code "Print" Messages Removal.
- Updter / FTP Code Cleanup 
- No More FTP Duplicated Progress Messages Though The Workaround Is Not Really Clean.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,7 +13,10 @@
         <p align="justify">
         <span style="font-size: 14pt; font-weight: 700">2.0.8 - Stable</span>
         <ul>
-        	<li>
+            <li>
+                Updater / FTP Code Cleanup.
+            </li>
+            <li>
                 Fixed a Bug where more Templates than required were downloaded by sIBL_GUI Updater.
             </li>
             <li>
