--- a/src/Help/Maya_MR Template/Maya MR Template Manual.htm
+++ b/src/Help/Maya_MR Template/Maya MR Template Manual.htm
@@ -97,7 +97,10 @@
                         <b>Create FeedBack :</b> Make the Feedback visible and attach to it the current IBL LDR Background image so there is a visual feedback in the <i>Viewport</i>.
                     </p>
 					<p>
-                        <b>Activate Tonemapping :</b> Connect a <i>mia_exposure_simple</i> shader in current / selected <i>Camera(s)</i>.
+                        <b>Activate Linea Workflow :</b> Connect a <i>mia_exposure_simple</i> shader in current / selected <i>Camera(s)</i>.
+                    </p>
+					<p>
+                        <b>Use Framebuffer Gamma :</b> Sets the Render Globals Framebuffer Gamma to appropriate value. The mia_exposure_simple Gamma is set to 1.0.
                     </p>
 					<p>
                         <b>Camera Selection Dialog :</b> A <i>Camera(s)</i> selection dialog appears so you can choose wich <i>Camera(s)</i> will be affected by the IBL.
