--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -4,14 +4,23 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 8 - S t a b l e</span>
+            <span style="font-weight: 700; font-size: 24pt">s I B L _ G U I - 2 . 0 . 9 - S t a b l e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Change Log</span>
         </p>
         <span style="font-size: 18pt; font-weight: 700">Releases</span>
         <br/>
         <p align="justify">
-        <span style="font-size: 14pt; font-weight: 700">2.0.8 - Stable</span>
+        <span style="font-size: 14pt; font-weight: 700">2.0.9 - Stable</span>
+        <ul>
+            <li>
+                Refinements in sIBL_GUI UI.
+            </li>
+            <li>
+                Corrected the incorrect Help / Manual Files Download Path on Frozen Executables.
+            </li>
+        </ul>
+        <span style="font-size: 14pt; font-weight: 700">2.0.8</span>
         <ul>
             <li>
                 Updater / FTP Code Cleanup.
