sIBL_GUI - 2.0.9 - Change Log -
- Maya Templates, Help / Manual Files And Version Numbers Updated.

--- a/src/Help/Maya_Turtle Template/Maya Turtle Template Manual.htm
+++ b/src/Help/Maya_Turtle Template/Maya Turtle Template Manual.htm
@@ -118,9 +118,9 @@
                 <li>
                     <span style="font-size: 14pt; font-weight: 700">Scene Components</span>
                     <p>
-                        <b>sIBL_FeedBack :</b>
-                        There are several Controls Attributes on the <i>sIBL_FeedBack</i>
-                        Sphere available in the <i>Channel Box</i>.
+                        <b>sIBL_Controls / [ Smart IBL Controls ] :</b>
+                        There are several Controls Attributes on the <i>sIBL_Controls</i>
+                        Annotation available in the <i>Channel Box</i>.
                     </p>
                     <ul>
                         <li>
