sIBL_GUI - 2.0.9 - Change Log -
- Templates / Help / Manual Files Updated, RfM Template First Beta Release, Versions Numbers Updated.

--- a/src/Help/Maya_RfM Template/Maya RfM Template Manual.htm
+++ b/src/Help/Maya_RfM Template/Maya RfM Template Manual.htm
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Maya - VRay - Template - Manual - Help File</title>
+        <title>Maya - RenderMan For Maya - Template - Manual - Help File</title>
         <style type="text/css">
             body {
                 text-align: justify;
@@ -32,7 +32,7 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">M a y a - V R a y - T e m p l a t e</span>
+            <span style="font-weight: 700; font-size: 24pt">M a y a - R e n d e r M a n&nbsp F o r&nbsp M a y a - T e m p l a t e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Manual - Help File</span>
         </p>
@@ -56,7 +56,7 @@
         <p align="justify">
             <span style="font-size: 18pt; font-weight: 700">Introduction</span>
             <br/>
-            Maya VRay is a sIBL_GUI Template for Maya and VRay For Maya starting from 2K versions. It provides a bridge beetween Maya, VRay and Smart IBL. There is also an Helper Script with everything you need to use sIBL_GUI smoothly with Maya here : <a href="http://www.hdrlabs.com/cgi-bin/forum/YaBB.pl?num=1223936394/2#2">sIBL_GUI For Maya - Helper Script</a>
+            Maya RenderMan For Maya is a sIBL_GUI Template for Maya and RfM starting from 2K versions. It provides a bridge beetween Maya, RfM and Smart IBL. There is also an Helper Script with everything you need to use sIBL_GUI smoothly with Maya here : <a href="http://www.hdrlabs.com/cgi-bin/forum/YaBB.pl?num=1223936394/2#2">sIBL_GUI For Maya - Helper Script</a>
         </p>
         <p align="justify">
             <span style="font-size: 18pt; font-weight: 700">Options</span>
@@ -106,8 +106,8 @@
                         Make the Feedback visible and attach to it the current IBL LDR Background image so there is a visual feedback in the <i>Viewport</i>.
                     </p>
                     <p>
-                        <b>Activate Indirect Illumination :</b>
-                        <i>Indirect Illumination</i>
+                        <b>Activate Raytracing :</b>
+                        <i>Raytracing</i>
                         is activated in the current <i>Scene</i>.
                     </p>
                     <p>
