--- a/src/Help/Maya_VRay_DLight Template/Maya VRay Dome Light Template Manual.htm
+++ b/src/Help/Maya_VRay_DLight Template/Maya VRay Dome Light Template Manual.htm
@@ -32,7 +32,7 @@
     </head>
     <body>
         <p align="center">
-            <span style="font-weight: 700; font-size: 24pt">M a y a - V R a y  D o m e  L i g h t - T e m p l a t e</span>
+            <span style="font-weight: 700; font-size: 24pt">M a y a - V R a y&nbsp D o m e&nbsp L i g h t - T e m p l a t e</span>
             <br/>
             <span style="font-weight: 700; font-size: 20pt">Manual - Help File</span>
         </p>
@@ -128,7 +128,7 @@
                         </li>
                     </ul>
                     <br/>
-                    <img src="Resources/sIBL_Feedback_Attributes.jpg">
+                    <img src="Resources/sIBL_Controls_Attributes.jpg">
                 </li>
             </ul>
         </p>
