sIBL_GUI - 2.1.0 - Change Log -
- Manual / Help Files Updated, Change Log Updated, Versions Numbers Updated.

--- a/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
+++ b/src/Help/sIBL_GUI/sIBL_GUI Manual.htm
@@ -227,7 +227,10 @@
                     <br/>
                     <br/>
                     <img src="Resources/sIBL_GUI%20-%20Import%20Tab.jpg">
-                    <p>
+                    <br/>
+                    <br/>
+					<img src="Resources/sIBL_GUI%20-%20Import%20Tab%20-%20ReWire.jpg">
+					<p>
                         <b>Import Tab</b>
                         is where you configure your <b>Loader Script</b>. You can choose your <b>Target 3D Package</b>
                         using one of the <b>Templates</b>, tweak options for the <b>Loader Script</b>, etc... On the left you will find informations and options for the selected <b>sIBL Set</b>, and on the right are options to tweak the <b>Template</b>
@@ -275,15 +278,7 @@
                                 : Edits the current Template in default Text Editor.
                                 <br/>
                                 Tips : You can define your Custom Text Editor in the Preferences Tab. Hardcoded Text Editors are : Notepad.exe on Windows, Gedit, Kwrite, Nedit, Mousepad on Linux and TextEdit on Mac Os X.
-                            </li>
-                            <li>
-                                <b>Common Attributes Page</b>
-                                : Common Attributes settings of the Loader Script.
-                            </li>
-                            <li>
-                                <b>Additional Attributes Page</b>
-                                : Additional Attributes settings of the Loader Script.
-                            </li>
+                            </li>           
                             <li>
                                 <b>Output Loader Script PushButton</b>
                                 : Outputs the Loader Script to the "TMP" ( Windows ) or "TMPDIR" ( Linux, MacOsX ) variable path.
@@ -307,6 +302,18 @@
                                 : Opened Port of the Target 3D Package.
                                 <br/>
                             </li>
+							<li>
+                                <b>Common Attributes Page</b>
+                                : Common Attributes settings of the Loader Script.
+                            </li>
+                            <li>
+                                <b>Additional Attributes Page</b>
+                                : Additional Attributes settings of the Loader Script.
+                            </li>
+							<li>
+                                <b>ReWire Components Page</b>
+                                : You can rewire the Background / Lighting / Reflection Component Images with each others or load a Custom Image for each of the Component. This allows you to mix you sIBL Sets, or kind of build them on the fly.
+                            </li>                           
                         </ul>
                     </p>
                     <br/>
