sIBL_GUI - 2.1.0 - Change Log -
- Maya_RfM.sIBLT Manual / Help Files Updated.

--- a/src/Help/Maya_RfM Template/Maya RfM Template Manual.htm
+++ b/src/Help/Maya_RfM Template/Maya RfM Template Manual.htm
@@ -110,6 +110,11 @@
                         <i>Raytracing</i>
                         is activated in the current <i>Scene</i>.
                     </p>
+					  <p>
+                        <b>Activate Color Bleeding :</b>
+                        <i>Color Bleeding</i>
+                        is activated in the <i>Diffuse Environment Ligth</i> and the associated <i>Radiosity Bake Pass</i> is created and connected to the related <i>Environment Light</i>.
+                    </p>
                     <p>
                         <b>Feedback Radius :</b>
                         Sets the Feedback radius in Maya units.
