sIBL_GUI - 2.1.1 - Change Log -
- Last Visited Folder Code.

--- a/Change Log/Change Log.htm
+++ b/Change Log/Change Log.htm
@@ -13,6 +13,12 @@
         <p align="justify">
         	<span style="font-size: 14pt; font-weight: 700">2.1.1 - Stable</span>
         <ul>
+        	<li>
+              	sIBL_GUI now restores the last visited folder.
+            </li>
+        	 <li>
+              	Render Combo Box added in the Import Tab ( Usefull when you have multiple Templates for a Renderer ).
+            </li>
             <li>
                 Refinements in sIBL_GUI UI.
             </li>
